{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "InGame",
            "id": "d0d0d25a-025f-45f6-bc23-288da32217f9",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "ebaa6ac4-4e34-40f4-9e56-5c3f48b64203",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "c78ace7e-8949-4e10-b08b-d53d32d9bf9b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "97c89e52-4ada-4c28-91fd-fec240601dac",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ebc9644-d74e-46cf-bbec-e3f6a70db038",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}